--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <!-- custom css -->
-    <link rel="stylesheet" href="css/style.css" />
     <!-- bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -14,12 +12,353 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <!-- font awesome icon -->
+    <script
+      src="https://kit.fontawesome.com/6593f040b4.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- custom css -->
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header>
-      <h1>hello world!</h1>
+      <!-- banner-section start -->
+      <section class="mb-5 honda-bg-primary">
+        <div class="container">
+          <di class="row g-4 py-5 align-items-center">
+            <div class="col-md-6">
+              <p class="text-white">
+                Computer-controlled digital transistorized with electronic
+                advance
+              </p>
+              <h1 class="text-white fw-bold">Honda CBR 300R</h1>
+              <p class="honda-text-color">
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+                Exercitation veniam consequat sunt nostrud amet.
+              </p>
+              <!-- Button trigger modal -->
+              <button
+                type="button"
+                class="btn btn-honda-primary px-4 text-white"
+                data-bs-toggle="modal"
+                data-bs-target="#staticBackdrop"
+              >
+                Purchase
+              </button>
+
+              <!-- Modal -->
+              <div
+                class="modal fade"
+                id="staticBackdrop"
+                data-bs-backdrop="static"
+                data-bs-keyboard="false"
+                tabindex="-1"
+                aria-labelledby="staticBackdropLabel"
+                aria-hidden="true"
+              >
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="staticBackdropLabel">
+                        Purchasing Honda CBR 300R
+                      </h5>
+                      <button
+                        type="button"
+                        class="btn-close"
+                        data-bs-dismiss="modal"
+                        aria-label="Close"
+                      ></button>
+                    </div>
+                    <div class="modal-body">
+                      <input type="text" placeholder="Your Card No" />
+                      <br />
+                      <br />
+                      <input type="date" />
+                    </div>
+                    <div class="modal-footer">
+                      <h2 class="me-auto">
+                        total <span class="honda-text-primary">$1200</span>
+                      </h2>
+                      <button
+                        type="button"
+                        class="btn btn-secondary"
+                        data-bs-dismiss="modal"
+                      >
+                        Close
+                      </button>
+                      <button type="button" class="btn btn-primary">
+                        Submit
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <img class="img-fluid" src="images/header-bike.png" alt="" />
+            </div>
+          </di>
+        </div>
+      </section>
     </header>
-    <main></main>
+    <main>
+      <!-- featured bike section strat -->
+      <section>
+        <div class="container">
+          <div class="text-center">
+            <h1>Fetured Bikes 2021</h1>
+            <small class="honda-text-primary">Best bike collection</small>
+          </div>
+          <div class="row g-5 my-4">
+            <div class="col-md-4">
+              <img
+                style="filter: grayscale(100%)"
+                class="img-fluid"
+                src="images/feature-bike.jpg"
+                alt=""
+              />
+            </div>
+            <div class="col-md-4">
+              <img class="img-fluid" src="images/feature-bike.jpg" alt="" />
+            </div>
+            <div class="col-md-4">
+              <img
+                style="filter: grayscale(100%)"
+                class="img-fluid"
+                src="images/feature-bike.jpg"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- happy client section start -->
+      <section class="my-5">
+        <div class="container">
+          <div>
+            <h1 class="text-center mb-4">
+              Happy <span class="honda-text-primary">Clients Says</span>
+            </h1>
+          </div>
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100">
+                <img
+                  src="images/user-1.png"
+                  class="card-img-top w-75 mx-auto mt-3"
+                  alt="..."
+                />
+                <div class="card-body text-center">
+                  <p class="card-text">
+                    Slate helps you see how many more days you need to work to
+                    reach your financial goal for the month and year.
+                  </p>
+                  <p>
+                    <i class="fas honda-text-primary fa-star"></i
+                    ><i class="fas honda-text-primary fa-star"></i
+                    ><i class="fas honda-text-primary fa-star"></i
+                    ><i class="fas honda-text-primary fa-star"></i
+                    ><i class="far fa-star"></i>
+                  </p>
+                  <h4 class="text-primary">Regina Miles</h4>
+                  <h5>Banker</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img
+                  src="images/user-2.png"
+                  class="card-img-top w-75 mx-auto mt-3"
+                  alt="..."
+                />
+                <div class="card-body text-center">
+                  <p class="card-text">
+                    Slate helps you see how many more days you need to work to
+                    reach your financial goal for the month and year.
+                  </p>
+                  <p>
+                    <i class="fas honda-text-primary fa-star"></i
+                    ><i class="fas honda-text-primary fa-star"></i
+                    ><i class="fas honda-text-primary fa-star"></i
+                    ><i class="fas honda-text-primary fa-star"></i
+                    ><i class="far fa-star"></i>
+                  </p>
+                  <h4 class="text-primary">Regina Miles</h4>
+                  <h5>Banker</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img
+                  src="images/user-3.jpg"
+                  class="card-img-top w-75 mx-auto mt-3"
+                  alt="..."
+                />
+                <div class="card-body text-center">
+                  <p class="card-text">
+                    Slate helps you see how many more days you need to work to
+                    reach your financial goal for the month and year.
+                  </p>
+                  <p>
+                    <i class="fas honda-text-primary fa-star"></i
+                    ><i class="fas honda-text-primary fa-star"></i
+                    ><i class="fas honda-text-primary fa-star"></i
+                    ><i class="fas honda-text-primary fa-star"></i
+                    ><i class="far fa-star"></i>
+                  </p>
+                  <h4 class="text-primary">Regina Miles</h4>
+                  <h5>Banker</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- FAQ section start -->
+      <section>
+        <div class="container">
+          <h1 class="text-center mb-4">
+            Frequently <span class="honda-text-primary">Asked Questions</span>
+          </h1>
+          <div class="row align-items-center">
+            <div class="col-md-6">
+              <img class="img-fluid p-5" src="images/faq.png" alt="" />
+            </div>
+            <div class="col-md-6 p-3">
+              <div class="accordion" id="accordionExample">
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingOne">
+                    <button
+                      class="accordion-button"
+                      type="button"
+                      data-bs-toggle="collapse"
+                      data-bs-target="#collapseOne"
+                      aria-expanded="true"
+                      aria-controls="collapseOne"
+                    >
+                      What ar the most important things I should know about
+                      riding a bike?
+                    </button>
+                  </h2>
+                  <div
+                    id="collapseOne"
+                    class="accordion-collapse collapse show"
+                    aria-labelledby="headingOne"
+                    data-bs-parent="#accordionExample"
+                  >
+                    <div class="accordion-body">
+                      Safety First! always obey the rules of the road. Obey all
+                      traffic signals, and laws. Get in the mindset of "driving"
+                      your bike-- not just "riding" your bike. This will help
+                      you be a more focused and legally complaint bike rider.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingTwo">
+                    <button
+                      class="accordion-button collapsed"
+                      type="button"
+                      data-bs-toggle="collapse"
+                      data-bs-target="#collapseTwo"
+                      aria-expanded="false"
+                      aria-controls="collapseTwo"
+                    >
+                      How can I tell if my helmet is old and I need a new one?
+                    </button>
+                  </h2>
+                  <div
+                    id="collapseTwo"
+                    class="accordion-collapse collapse"
+                    aria-labelledby="headingTwo"
+                    data-bs-parent="#accordionExample"
+                  >
+                    <div class="accordion-body">
+                      <strong>This is the second item's accordion body.</strong>
+                      It is hidden by default, until the collapse plugin adds
+                      the appropriate classes that we use to style each element.
+                      These classes control the overall appearance, as well as
+                      the showing and hiding via CSS transitions. You can modify
+                      any of this with custom CSS or overriding our default
+                      variables. It's also worth noting that just about any HTML
+                      can go within the <code>.accordion-body</code>, though the
+                      transition does limit overflow.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingThree">
+                    <button
+                      class="accordion-button collapsed"
+                      type="button"
+                      data-bs-toggle="collapse"
+                      data-bs-target="#collapseThree"
+                      aria-expanded="false"
+                      aria-controls="collapseThree"
+                    >
+                      My bike has been in storage is it safe to ride?
+                    </button>
+                  </h2>
+                  <div
+                    id="collapseThree"
+                    class="accordion-collapse collapse"
+                    aria-labelledby="headingThree"
+                    data-bs-parent="#accordionExample"
+                  >
+                    <div class="accordion-body">
+                      <strong>This is the third item's accordion body.</strong>
+                      It is hidden by default, until the collapse plugin adds
+                      the appropriate classes that we use to style each element.
+                      These classes control the overall appearance, as well as
+                      the showing and hiding via CSS transitions. You can modify
+                      any of this with custom CSS or overriding our default
+                      variables. It's also worth noting that just about any HTML
+                      can go within the <code>.accordion-body</code>, though the
+                      transition does limit overflow.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingThree">
+                    <button
+                      class="accordion-button collapsed"
+                      type="button"
+                      data-bs-toggle="collapse"
+                      data-bs-target="#collapseThree"
+                      aria-expanded="false"
+                      aria-controls="collapseThree"
+                    >
+                      What rules should I follow when ridding my bike?
+                    </button>
+                  </h2>
+                  <div
+                    id="collapseThree"
+                    class="accordion-collapse collapse"
+                    aria-labelledby="headingThree"
+                    data-bs-parent="#accordionExample"
+                  >
+                    <div class="accordion-body">
+                      <strong>This is the third item's accordion body.</strong>
+                      It is hidden by default, until the collapse plugin adds
+                      the appropriate classes that we use to style each element.
+                      These classes control the overall appearance, as well as
+                      the showing and hiding via CSS transitions. You can modify
+                      any of this with custom CSS or overriding our default
+                      variables. It's also worth noting that just about any HTML
+                      can go within the <code>.accordion-body</code>, though the
+                      transition does limit overflow.
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
     <!-- bootstrap js -->
     <script
