--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@
               Happy <span class="honda-text-primary">Clients Says</span>
             </h1>
           </div>
-          <div class="row row-cols-1 row-cols-md-3 g-4">
+          <div class="row row-cols-1 row-cols-md-3 g-5">
             <div class="col">
               <div class="card h-100">
                 <img
                   src="images/user-1.png"
-                  class="card-img-top w-75 mx-auto mt-3"
+                  class="card-img-top mx-auto mt-3 honda-client-img"
                   alt="..."
                 />
                 <div class="card-body text-center">
@@ -154,15 +154,17 @@
                     Slate helps you see how many more days you need to work to
                     reach your financial goal for the month and year.
                   </p>
-                  <p>
-                    <i class="fas honda-text-primary fa-star"></i
-                    ><i class="fas honda-text-primary fa-star"></i
-                    ><i class="fas honda-text-primary fa-star"></i
-                    ><i class="fas honda-text-primary fa-star"></i
-                    ><i class="far fa-star"></i>
-                  </p>
-                  <h4 class="text-primary">Regina Miles</h4>
-                  <h5>Banker</h5>
+                  <div>
+                    <p>
+                      <i class="fas honda-text-primary fa-star"></i
+                      ><i class="fas honda-text-primary fa-star"></i
+                      ><i class="fas honda-text-primary fa-star"></i
+                      ><i class="fas honda-text-primary fa-star"></i
+                      ><i class="far fa-star"></i>
+                    </p>
+                    <h4 class="text-primary">Regina Miles</h4>
+                    <h5>Banker</h5>
+                  </div>
                 </div>
               </div>
             </div>
@@ -170,7 +172,7 @@
               <div class="card h-100">
                 <img
                   src="images/user-2.png"
-                  class="card-img-top w-75 mx-auto mt-3"
+                  class="card-img-top mx-auto mt-3 honda-client-img"
                   alt="..."
                 />
                 <div class="card-body text-center">
@@ -194,7 +196,13 @@
               <div class="card h-100">
                 <img
                   src="images/user-3.jpg"
-                  class="card-img-top w-75 mx-auto mt-3"
+                  class="
+                    card-img-top
+                    honda-client-img
+                    mx-auto
+                    mt-3
+                    rounded-circle
+                  "
                   alt="..."
                 />
                 <div class="card-body text-center">
@@ -352,6 +360,88 @@
                       transition does limit overflow.
                     </div>
                   </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- achievement section -->
+      <section class="my-5">
+        <div class="container">
+          <div class="text-center">
+            <p>OUR PRIDE</p>
+            <h1>ACHIEVEMENTS</h1>
+            <h3>AWARDS</h3>
+          </div>
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100 bg-light">
+                <img
+                  src="images/awards/award-1.jpeg"
+                  class="
+                    card-img-top
+                    honda-award-img
+                    my-3
+                    shadow
+                    rounded-circle
+                    mx-auto
+                  "
+                  alt="..."
+                />
+                <div class="card-body text-center">
+                  <h5 class="card-title">THE DEMING PRIZE</h5>
+                  <p class="card-text">
+                    HONDA Motor Company is the only two-wheeler company in the
+                    world to be awarded the world's most prestigious and coveted
+                    recognition in TQM.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100 bg-light">
+                <img
+                  src="images/awards/award-2.jpeg"
+                  class="
+                    card-img-top
+                    honda-award-img
+                    my-3
+                    shadow
+                    rounded-circle
+                    mx-auto
+                  "
+                  alt="..."
+                />
+                <div class="card-body text-center">
+                  <h5 class="card-title">Most Appealing Premium Motorcycle</h5>
+                  <p class="card-text">
+                    Honda CBR 300 R is the Most Appealing Premium Motorcycle as
+                    awarded by J.D.Power Asia Pacific Awards for 2018.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100 bg-light">
+                <img
+                  src="images/awards/award-3.jpeg"
+                  class="
+                    card-img-top
+                    honda-award-img
+                    my-3
+                    shadow
+                    rounded-circle
+                    mx-auto
+                  "
+                  alt="..."
+                />
+                <div class="card-body text-center">
+                  <h5 class="card-title">HIGHEST IN CUSTOMER SATISFACTION</h5>
+                  <p class="card-text">
+                    HONDA Moto Company has been awarded highest in Customer
+                    Satisfaction by J.D Power Asia Pacific Award for 2019.
+                  </p>
                 </div>
               </div>
             </div>
