--- a/index.html
+++ b/index.html
@@ -5,24 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <!-- bootstrap -->
+    <!-----------------------
+       bootstrap 
+      ---------------------->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <!-- font awesome icon -->
+    <!-----------------------
+       font awesome icon 
+      ----------------------->
     <script
       src="https://kit.fontawesome.com/6593f040b4.js"
       crossorigin="anonymous"
     ></script>
-    <!-- custom css -->
+    <!-----------------------
+       custom css 
+      ----------------------->
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header>
-      <!-- banner-section start -->
+      <!-----------------------
+         banner-section start 
+        ----------------------->
       <section class="mb-5 honda-bg-primary">
         <div class="container">
           <di class="row g-4 py-5 align-items-center">
@@ -32,7 +40,7 @@
                 advance
               </p>
               <h1 class="text-white fw-bold">Honda CBR 300R</h1>
-              <p class="honda-text-color">
+              <p class="honda-p-color">
                 Amet minim mollit non deserunt ullamco est sit aliqua dolor do
                 amet sint. Velit officia consequat duis enim velit mollit.
                 Exercitation veniam consequat sunt nostrud amet.
@@ -40,7 +48,7 @@
               <!-- Button trigger modal -->
               <button
                 type="button"
-                class="btn btn-honda-primary px-4 text-white"
+                class="btn honda-btn-primary px-4 text-white"
                 data-bs-toggle="modal"
                 data-bs-target="#staticBackdrop"
               >
@@ -60,7 +68,7 @@
                 <div class="modal-dialog">
                   <div class="modal-content">
                     <div class="modal-header">
-                      <h5 class="modal-title" id="staticBackdropLabel">
+                      <h5 class="modal-title" id="staticBackdropLabel fw-bold">
                         Purchasing Honda CBR 300R
                       </h5>
                       <button
@@ -71,24 +79,23 @@
                       ></button>
                     </div>
                     <div class="modal-body">
-                      <input type="text" placeholder="Your Card No" />
+                      <input type="text" placeholder="Name on Card" />
                       <br />
                       <br />
-                      <input type="date" />
+                      <input type="text" placeholder="Card No" />
+                      <br />
+                      <br />
+                      <input type="month" name="" id="" />
+                      <br />
+                      <br />
+                      <input type="text" placeholder="Security Code" />
                     </div>
                     <div class="modal-footer">
                       <h2 class="me-auto">
                         total <span class="honda-text-primary">$1200</span>
                       </h2>
-                      <button
-                        type="button"
-                        class="btn btn-secondary"
-                        data-bs-dismiss="modal"
-                      >
-                        Close
-                      </button>
                       <button type="button" class="btn btn-primary">
-                        Submit
+                        Complete Payment
                       </button>
                     </div>
                   </div>
@@ -101,9 +108,14 @@
           </di>
         </div>
       </section>
+      <!-----------------------
+        banner-section end 
+      ------------------------->
     </header>
     <main>
-      <!-- featured bike section strat -->
+      <!-----------------------------
+         featured bike section strat 
+        ---------------------------->
       <section>
         <div class="container">
           <div class="text-center">
@@ -133,7 +145,12 @@
           </div>
         </div>
       </section>
-      <!-- happy client section start -->
+      <!-----------------------------
+         featured bike section end 
+        ---------------------------->
+      <!-----------------------------
+        happy client section start 
+      ------------------------------->
       <section class="my-5">
         <div class="container">
           <div>
@@ -146,13 +163,15 @@
               <div class="card h-100">
                 <img
                   src="images/user-1.png"
-                  class="card-img-top mx-auto mt-3 honda-client-img"
+                  class="card-img-top mx-auto my-3 honda-client-img"
                   alt="..."
                 />
                 <div class="card-body text-center">
-                  <p class="card-text">
+                  <p class="card-text px-3">
                     Slate helps you see how many more days you need to work to
-                    reach your financial goal for the month and year.
+                    reach your financial goal for the month and year. Lorem
+                    ipsum dolor sit, amet consectetur adipisicing elit. In,
+                    neque?
                   </p>
                   <div>
                     <p>
@@ -160,7 +179,7 @@
                       ><i class="fas honda-text-primary fa-star"></i
                       ><i class="fas honda-text-primary fa-star"></i
                       ><i class="fas honda-text-primary fa-star"></i
-                      ><i class="far fa-star"></i>
+                      ><i class="fas honda-text-primary fa-star-half-alt"></i>
                     </p>
                     <h4 class="text-primary">Regina Miles</h4>
                     <h5>Banker</h5>
@@ -172,23 +191,24 @@
               <div class="card h-100">
                 <img
                   src="images/user-2.png"
-                  class="card-img-top mx-auto mt-3 honda-client-img"
+                  class="card-img-top mx-auto my-3 honda-client-img"
                   alt="..."
                 />
                 <div class="card-body text-center">
-                  <p class="card-text">
+                  <p class="card-text px-3">
                     Slate helps you see how many more days you need to work to
-                    reach your financial goal for the month and year.
+                    reach your financial goal for the month and year. Lorem
+                    ipsum dolor sit amet consectetur adipisicing elit. Cumque,
                   </p>
                   <p>
                     <i class="fas honda-text-primary fa-star"></i
                     ><i class="fas honda-text-primary fa-star"></i
                     ><i class="fas honda-text-primary fa-star"></i
-                    ><i class="fas honda-text-primary fa-star"></i
-                    ><i class="far fa-star"></i>
+                    ><i class="fas honda-text-primary fa-star"></i>
+                    <i class="far honda-text-primary fa-star"></i>
                   </p>
-                  <h4 class="text-primary">Regina Miles</h4>
-                  <h5>Banker</h5>
+                  <h4 class="text-primary">Nichole Bedoya</h4>
+                  <h5>Fashion Designer</h5>
                 </div>
               </div>
             </div>
@@ -200,35 +220,41 @@
                     card-img-top
                     honda-client-img
                     mx-auto
-                    mt-3
+                    my-3
                     rounded-circle
                   "
                   alt="..."
                 />
                 <div class="card-body text-center">
-                  <p class="card-text">
+                  <p class="card-text px-3">
                     Slate helps you see how many more days you need to work to
-                    reach your financial goal for the month and year.
+                    reach your financial goal for the month and year. Lorem
+                    ipsum dolor sit amet consectetur adipisicing elit. Corrupti!
                   </p>
                   <p>
                     <i class="fas honda-text-primary fa-star"></i
                     ><i class="fas honda-text-primary fa-star"></i
                     ><i class="fas honda-text-primary fa-star"></i
                     ><i class="fas honda-text-primary fa-star"></i
-                    ><i class="far fa-star"></i>
+                    ><i class="fas honda-text-primary fa-star-half-alt"></i>
                   </p>
-                  <h4 class="text-primary">Regina Miles</h4>
-                  <h5>Banker</h5>
+                  <h4 class="text-primary">Ameliya Gongales</h4>
+                  <h5>Musician</h5>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <!-- FAQ section start -->
+      <!-----------------------------
+        happy client section end 
+      ------------------------------->
+      <!-----------------------------
+         FAQ section start 
+        ----------------------------->
       <section>
         <div class="container">
-          <h1 class="text-center mb-4">
+          <h1 class="text-center">
             Frequently <span class="honda-text-primary">Asked Questions</span>
           </h1>
           <div class="row align-items-center">
@@ -366,7 +392,12 @@
           </div>
         </div>
       </section>
-      <!-- achievement section -->
+      <!-----------------------------
+         FAQ section end 
+        ----------------------------->
+      <!-----------------------------
+         achievement section start 
+        ----------------------------->
       <section class="my-5">
         <div class="container">
           <div class="text-center">
@@ -448,9 +479,91 @@
           </div>
         </div>
       </section>
+      <!-----------------------------
+         achievement section end 
+        ----------------------------->
+      <!-----------------------------
+        subscribe section start 
+      ------------------------------->
+      <section class="mt-5 honda-bg-primary">
+        <div class="container py-5 text-white">
+          <div class="text-center">
+            <h3>For More Information</h3>
+            <h4>Subscribe here</h4>
+            <p>(for getting updates)</p>
+          </div>
+          <form>
+            <div class="mb-3">
+              <label for="exampleInputName" class="form-label">Your Name</label>
+              <input
+                type="name"
+                class="form-control"
+                id="exampleInputName"
+                aria-describedby="nameHelp"
+              />
+              <br />
+              <label for="exampleInputDate" class="form-label"
+                >Birth Date</label
+              >
+              <input
+                type="date"
+                class="form-control"
+                id="exampleInputDate"
+                aria-describedby="birthDateHelp"
+              />
+              <br />
+              <label for="exampleInputEmail1" class="form-label"
+                >Email address</label
+              >
+              <input
+                type="email"
+                class="form-control"
+                id="exampleInputEmail1"
+                aria-describedby="emailHelp"
+              />
+              <div id="emailHelp" class="form-text">
+                We'll never share your email with anyone else.
+              </div>
+            </div>
+            <div class="mb-3">
+              <label for="exampleInputPassword1" class="form-label"
+                >Password</label
+              >
+              <input
+                type="password"
+                class="form-control"
+                id="exampleInputPassword1"
+              />
+            </div>
+            <div class="mb-3 form-check">
+              <input
+                type="checkbox"
+                class="form-check-input"
+                id="exampleCheck1"
+              />
+              <label class="form-check-label" for="exampleCheck1"
+                >I accept the
+                <a
+                  href="https://getbootstrap.com/docs/5.0/utilities/text/"
+                  class="text-decoration-none"
+                  target="_blank"
+                  >terms and conditions</a
+                >
+              </label>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="reset" class="btn btn-primary">Reset</button>
+          </form>
+        </div>
+      </section>
+      <!-----------------------------
+        subscribe section end 
+      ------------------------------->
     </main>
     <footer></footer>
-    <!-- bootstrap js -->
+    <!-----------------------
+       bootstrap js link
+      ---------------------->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
