--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Honda</title>
     <!-----------------------
        bootstrap 
       ---------------------->
@@ -108,9 +108,6 @@
           </di>
         </div>
       </section>
-      <!-----------------------
-        banner-section end 
-      ------------------------->
     </header>
     <main>
       <!-----------------------------
@@ -145,9 +142,7 @@
           </div>
         </div>
       </section>
-      <!-----------------------------
-         featured bike section end 
-        ---------------------------->
+
       <!-----------------------------
         happy client section start 
       ------------------------------->
@@ -246,9 +241,7 @@
           </div>
         </div>
       </section>
-      <!-----------------------------
-        happy client section end 
-      ------------------------------->
+
       <!-----------------------------
          FAQ section start 
         ----------------------------->
@@ -392,9 +385,7 @@
           </div>
         </div>
       </section>
-      <!-----------------------------
-         FAQ section end 
-        ----------------------------->
+
       <!-----------------------------
          achievement section start 
         ----------------------------->
@@ -479,9 +470,7 @@
           </div>
         </div>
       </section>
-      <!-----------------------------
-         achievement section end 
-        ----------------------------->
+
       <!-----------------------------
         subscribe section start 
       ------------------------------->
@@ -556,9 +545,6 @@
           </form>
         </div>
       </section>
-      <!-----------------------------
-        subscribe section end 
-      ------------------------------->
     </main>
     <footer></footer>
     <!-----------------------
